--- a/Linear Structures.ipynb
+++ b/Linear Structures.ipynb
@@ -1193,6 +1193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "according to the following <a href=\"https://stackoverflow.com/questions/6256983/how-are-deques-in-python-implemented-and-when-are-they-worse-than-lists\">post</a> the double ended queue type in python is a doudly linked list that is very efficent for inserting an poping objects with a complexity of O(1). this is more efficient than a regular list which may have an O(n) complexity when inserting at the head of a list."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -1386,11 +1393,562 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing The Josephus Problem Using a deque "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "def freeMan(startIndex=0, numberOfPeople=3, forward=True, skip=2,verbose=False):\n",
+    "    candidates=deque()\n",
+    "    startIndex=startIndex\n",
+    "    direction=forward\n",
+    "    skip=skip#\n",
+    "    \n",
+    "    #fill up the initial candidates names we will start with 0\n",
+    "    i=0\n",
+    "    while i in range(numberOfPeople):\n",
+    "        candidates.append(str(i))#['0','1','2']\n",
+    "        i +=1\n",
+    "    #let's start the count\n",
+    "    s=0#0\n",
+    "    \n",
+    "    while True:\n",
+    "        if verbose:\n",
+    "            print(\"s=%d\"%s)\n",
+    "            print(\"candidates=\"+str(candidates)+'\\n')\n",
+    "        \n",
+    "        if len(candidates)==1:#False\n",
+    "            flavius=candidates.popleft()#flavius=\n",
+    "            return flavius #to the Romans\n",
+    "            \n",
+    "        \n",
+    "        if s != startIndex+skip:#True\n",
+    "            candidates.rotate(-1)\n",
+    "                #candidates=\n",
+    "        else:\n",
+    "            looser=candidates.popleft()#'0'\n",
+    "            #candidates=\n",
+    "            if verbose:\n",
+    "                print(\"%s is out!\\n\"%looser)     \n",
+    "            s = 0#\n",
+    "            continue\n",
+    "        s += 1#\n",
+    "\n",
+    "#candidates = ['0','1','2']\n",
+    "#skip=2\n",
+    "#start=0\n",
+    "#['0','1']\n",
+    "#['1']\n",
+    "#['1']\n",
+    "freeMan()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s=0\n",
+      "candidates=deque(['0', '1', '2', '3'])\n",
+      "\n",
+      "s=1\n",
+      "candidates=deque(['1', '2', '3', '0'])\n",
+      "\n",
+      "s=2\n",
+      "candidates=deque(['2', '3', '0', '1'])\n",
+      "\n",
+      "2 is out!\n",
+      "\n",
+      "s=0\n",
+      "candidates=deque(['3', '0', '1'])\n",
+      "\n",
+      "s=1\n",
+      "candidates=deque(['0', '1', '3'])\n",
+      "\n",
+      "s=2\n",
+      "candidates=deque(['1', '3', '0'])\n",
+      "\n",
+      "1 is out!\n",
+      "\n",
+      "s=0\n",
+      "candidates=deque(['3', '0'])\n",
+      "\n",
+      "s=1\n",
+      "candidates=deque(['0', '3'])\n",
+      "\n",
+      "s=2\n",
+      "candidates=deque(['3', '0'])\n",
+      "\n",
+      "3 is out!\n",
+      "\n",
+      "s=0\n",
+      "candidates=deque(['0'])\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freeMan(0,4,True,2,True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linked Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For fun I am going to implement a doubly linked list in python. it's been a while since I have done that. Ack in college I had to do it in Pascal and then C."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's first define a node Class\n",
+    "class Node(object):\n",
+    "    def __init__(self,item=None):\n",
+    "        self.next=None\n",
+    "        self.prev=None\n",
+    "        self.item=item\n",
+    "#Then let's implement the actual List\n",
+    "class DoubleLinkedList(object):\n",
+    "    def __init__(self):\n",
+    "        self.head=None\n",
+    "        \n",
+    "    def append(self,item,head=True):\n",
+    "        newNode=Node(item)  \n",
+    "        if self.head==None:\n",
+    "            self.head=newNode\n",
+    "        elif head:\n",
+    "            #O(1)\n",
+    "            self.head.prev=newNode\n",
+    "            newNode.next=self.head\n",
+    "            self.head=newNode\n",
+    "        else:\n",
+    "            #O(n)\n",
+    "            nextNode=self.head\n",
+    "            while nextNode.next !=None:\n",
+    "                nextNode=nextNode.next\n",
+    "            nextNode.next=newNode\n",
+    "            newNode.prev=nextNode\n",
+    "    \n",
+    "    def pop(self,head=True):\n",
+    "        if self.head==None:\n",
+    "            raise self.EmptyList\n",
+    "        elif head:\n",
+    "            #O(1)\n",
+    "            item=self.head.item\n",
+    "            if self.head.next:\n",
+    "                self.head.next.prev=None\n",
+    "                self.head=self.head.next\n",
+    "            else:\n",
+    "                self.head=None\n",
+    "            return item\n",
+    "        else:\n",
+    "            #O(n)\n",
+    "            nextNode=self.head\n",
+    "            while nextNode.next !=None:\n",
+    "                nextNode=nextNode.next\n",
+    "            item=nextNode.item\n",
+    "            nextNode.prev.next=None\n",
+    "            return item\n",
+    "    \n",
+    "    def rotate(self,head=True):\n",
+    "        if len(self)==1:\n",
+    "            return\n",
+    "        if head:\n",
+    "            item=self.pop()\n",
+    "            newNode=self.append(item,False)\n",
+    "        else:\n",
+    "            item=self.pop(False)\n",
+    "            newNode=self.append(item)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        representation=\"\"\n",
+    "        nextNode=self.head\n",
+    "        while nextNode.next !=None:\n",
+    "            representation += str(nextNode.item)\n",
+    "            representation += \"=>\"\n",
+    "            nextNode=nextNode.next\n",
+    "        #last item\n",
+    "        representation += str(nextNode.item)\n",
+    "        return representation\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        length=0\n",
+    "        if self.head !=None:\n",
+    "            nextNode=self.head\n",
+    "            length+=1\n",
+    "            while nextNode.next !=None:\n",
+    "                length +=1\n",
+    "                nextNode=nextNode.next\n",
+    "        return length\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self)\n",
+    "    #Exception\n",
+    "    class EmptyList(Exception):\n",
+    "        pass\n",
+    "\n",
+    "                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "EmptyList",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEmptyList\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-205-0c4193df0bdc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDoubleLinkedList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mll\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-204-d1aa6e8cc0f5>\u001b[0m in \u001b[0;36mpop\u001b[0;34m(self, head)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmptyList\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mhead\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;31m#O(1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mEmptyList\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "ll=DoubleLinkedList()\n",
+    "ll.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ll.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3=>2=>1\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.append(2)\n",
+    "ll.append(3)\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3=>2=>1=>x=>y=>z\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.append(\"x\",head=False)\n",
+    "ll.append(\"y\",head=False)\n",
+    "ll.append(\"z\",head=False)\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2=>1=>x=>y=>z\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'z'"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll.pop(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2=>1=>x=>y\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1=>x=>y=>2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.rotate()\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2=>1=>x=>y\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.rotate(False)\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing The Josephus Problem Using my Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def freeMan(startIndex=0, numberOfPeople=3, forward=True, skip=2,verbose=False):\n",
+    "    candidates=DoubleLinkedList()\n",
+    "    startIndex=startIndex\n",
+    "    direction=forward\n",
+    "    skip=skip#\n",
+    "    \n",
+    "    #fill up the initial candidates names we will start with 0\n",
+    "    i=0\n",
+    "    while i in range(numberOfPeople):\n",
+    "        candidates.append(str(i),False)#['0','1','2']\n",
+    "        i +=1\n",
+    "    #let's start the count\n",
+    "    s=0#0\n",
+    "    \n",
+    "    while True:\n",
+    "        if verbose:\n",
+    "            print(\"s=%d\"%s)\n",
+    "            print(\"candidates=\"+str(candidates)+'\\n')\n",
+    "        \n",
+    "        if len(candidates)==1:#False\n",
+    "            flavius=candidates.pop()#flavius=\n",
+    "            return flavius #to the Romans\n",
+    "            \n",
+    "        \n",
+    "        if s != startIndex+skip:#True\n",
+    "            candidates.rotate()\n",
+    "                #candidates=\n",
+    "        else:\n",
+    "            looser=candidates.pop()#'0'\n",
+    "            #candidates=\n",
+    "            if verbose:\n",
+    "                print(\"%s is out!\\n\"%looser)     \n",
+    "            s = 0#\n",
+    "            continue\n",
+    "        s += 1#\n",
+    "\n",
+    "#candidates = ['0','1','2']\n",
+    "#skip=2\n",
+    "#start=0\n",
+    "#['0','1']\n",
+    "#['1']\n",
+    "#['1']\n",
+    "freeMan()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "freeMan(0,4,True,2,True)"
+   ]
   }
  ],
  "metadata": {
@@ -1398,18 +1956,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
